--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,7 @@
 @import "./scss/abstracts/mixins";
 
 @import "./scss/base/reset";
-
+@import "./scss/base/shared";
 // components
 @import "./scss/components/Nav";
 
