--- a/src/scss/components/_Nav.scss
+++ b/src/scss/components/_Nav.scss
@@ -1,10 +1,11 @@
 .header {
-  position: fixed;
+  // position: absolute;
   width: 100%;
   padding: 24px;
   z-index: 2;
   overflow-x: visible;
   font-family: "Barlow Condensed", open sans;
+  background: transparent;
 
   .toggler {
     position: absolute;
@@ -16,6 +17,7 @@
     cursor: pointer;
   }
   .nav {
+    z-index: 3;
     background-color: rgba(255, 255, 255, 0.1);
     height: 100vh;
     padding-top: 30%;
