--- a/src/scss/pages/_destPage.scss
+++ b/src/scss/pages/_destPage.scss
@@ -2,16 +2,26 @@
   display: flex;
   justify-content: center;
   color: white;
+  margin-top: -100px;
   padding-top: 25%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("/src/assets/destination/background-destination-mobile.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 
   &__heading {
-    // @include md-text;
-    font-size: 3vw;
+    @include md-text;
     font-weight: lighter;
     letter-spacing: 2px;
     text-align: center;
@@ -23,10 +33,71 @@
   }
 
   &__imageWrapper {
-    width: 50%;
+    width: 45%;
+    display: block;
+    margin: 10% auto;
+    animation-name: spin;
+    animation-duration: 50s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
 
   &__image {
     width: 100%;
+  }
+
+  .sliderButtons__wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .sliderButton {
+    @include md-text;
+    background: transparent;
+    color: $lavanderBlue;
+    border: none;
+    padding: 5px 0;
+    margin: 0 10px;
+  }
+
+  .glide__bullet--active {
+    border-bottom: 2px solid white;
+    color: white;
+  }
+
+  &__destInfo {
+    text-align: center;
+    padding: 0 30px;
+  }
+
+  &__destName {
+    @include lg-text;
+    font-family: "Bellefair", sans-serif;
+    font-weight: lighter;
+    margin-top: 35px;
+  }
+
+  &__destDescription {
+    @include md-text;
+    font-weight: lighter;
+    margin-bottom: 20px;
+    line-height: 25px;
+    color: $lavanderBlue;
+  }
+  &__hr {
+    border: 1px solid rgba(208, 214, 249, 0.1);
+  }
+  h4 {
+    @include md-text;
+    color: $lavanderBlue;
+    font-weight: lighter;
+    margin: 20px;
+    letter-spacing: 1px;
+  }
+  h3 {
+    font-size: 7vw;
+    font-family: "Bellefair", sans-serif;
+    font-weight: lighter;
+    margin-bottom: 30px;
   }
 }
