--- a/src/scss/pages/_homePage.scss
+++ b/src/scss/pages/_homePage.scss
@@ -3,13 +3,17 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  padding-top: 40%;
+  margin-top: -100px;
+  padding-top: 25%;
   color: #ffff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-attachment: fixed;
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85vh;
+  }
   h2 {
     @include xl-text;
     font-family: "Bellefair", sans-serif;
@@ -27,6 +31,7 @@
     padding: 0 4%;
     line-height: 24px;
     text-align: center;
+    width: 80%;
     @include md-text;
   }
   &__circleBtn {
