added crew page

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,9 +3,11 @@
 
 @import "./scss/base/reset";
 @import "./scss/base/shared";
+
 // components
 @import "./scss/components/Nav";
 
 // pages
 @import "./scss/pages/homePage";
 @import "./scss/pages/destPage";
+@import "./scss/pages/crewPage";
