finished mobile design

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,3 +11,4 @@
 @import "./scss/pages/homePage";
 @import "./scss/pages/destPage";
 @import "./scss/pages/crewPage";
+@import "./scss/pages/technologyPage";
