--- a/src/scss/pages/_crewPage.scss
+++ b/src/scss/pages/_crewPage.scss
@@ -3,21 +3,43 @@
   justify-content: center;
   color: white;
   margin-top: -100px;
-  padding-top: 25%;
+  padding-top: 20%;
   min-height: 100vh;
-  background-image: url("/src/assets/crew/background-crew-mobile.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: $richBlack;
+
+  h4 {
+    @include md-text;
+    font-weight: lighter;
+    text-align: center;
+    letter-spacing: 2.5px;
+    padding: 30px 0;
+    font-size: 4vw;
+    span {
+      color: rgba(255, 255, 255, 0.2);
+      margin-right: 15px;
+    }
+  }
+
+  h3 {
+    @include md-text;
+    font-family: "Bellefair", sans-serif;
+    font-weight: lighter;
+    color: rgba(255, 255, 255, 0.4);
+  }
+  h2 {
+    font-family: "Bellefair", sans-serif;
+    font-size: 5.5vw;
+    font-weight: lighter;
+    padding: 10px 0;
+  }
 
   &__crewmember {
     display: flex;
     flex-direction: column-reverse;
     text-align: center;
   }
+
   &__imageWrapper {
-    // width: 30%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -35,12 +57,21 @@
     }
   }
   &__image {
-    width: 30%;
+    width: 35%;
   }
-  //   .gilde__bullets {
-  //     display: flex;
-  //     justify-content: space-between;
-  //   }
+
+  &__bio {
+    width: 80%;
+    line-height: 25px;
+    margin: 0 auto;
+    color: $lavanderBlue;
+    @include md-text;
+    font-weight: lighter;
+    letter-spacing: 1px;
+  }
+  .glide__bullets {
+    padding: 30px;
+  }
   .glide__bullet {
     color: white;
     height: 10px;
