--- a/src/scss/base/_shared.scss
+++ b/src/scss/base/_shared.scss
@@ -1,8 +1,48 @@
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 .wrapper {
   animation: slideTop;
   animation-duration: 1s;
   animation-timing-function: ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 15%;
 }
+
+.page {
+  color: white;
+  background-position: center;
+  min-height: 100vh;
+  transition: 0.5s ease;
+  background-attachment: fixed;
+}
+
+p {
+  font-size: 4vw;
+  font-family: "Barlow", sans-serif;
+}
+
+h1 {
+  font-size: 15vw;
+  font-family: "Bellefair", sans-serif;
+  font-weight: lighter;
+}
+
+h2 {
+  font-size: 5vw;
+  font-family: "Barlow Condensed", sans-serif;
+}
+h3 {
+  font-size: 4.5vw;
+  font-family: "Barlow Condensed", sans-serif;
+}
+// home main heading 80px Bellefair
+// home smaller heading 16px regular barlow condensed
+// home paraghraph 15px regular barlow
+
+// slide heading 16px barlow condensed
 
 @keyframes slideTop {
   from {
