--- a/src/scss/pages/_technologyPage.scss
+++ b/src/scss/pages/_technologyPage.scss
@@ -1,3 +1,6 @@
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 .techPage {
   background-image: url(/src/assets/technology/background-technology-mobile.jpg);
   height: 100vh;
