--- a/src/scss/components/_Nav.scss
+++ b/src/scss/components/_Nav.scss
@@ -4,7 +4,7 @@
 .header {
   // position: fixed;
   width: 100%;
-  padding: 24px;
+  padding: 24px 24px 14px 24px;
   z-index: 2;
   overflow-x: visible;
   font-family: "Barlow Condensed", open sans;
