--- a/src/scss/pages/_technologyPage.scss
+++ b/src/scss/pages/_technologyPage.scss
@@ -1,18 +1,12 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
-.techPage {
+.technology {
   background-image: url(/src/assets/technology/background-technology-mobile.jpg);
-  height: 100vh;
-  margin-top: -100px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  padding-top: 25%;
   color: white;
 
   &__imgWrapper {
+    margin-top: 30px;
     width: 100%;
   }
 
@@ -42,40 +36,34 @@
     }
   }
 
-  h4 {
-    @include md-text;
+  h6 {
     font-weight: lighter;
     letter-spacing: 1px;
     color: $lavanderBlue;
   }
-
-  h2 {
-    font-family: "Bellefair", sans-serif;
-    font-size: 5.5vw;
+  h5 {
+    font-weight: lighter;
+    margin: 10px 0 15px 0;
+  }
+  h3 {
     font-weight: lighter;
     letter-spacing: 1px;
     padding: 10px 0;
-  }
-
-  h3 {
-    @include md-text;
-    font-weight: lighter;
-    margin: 30px 0;
-    text-align: center;
-    letter-spacing: 2px;
+    word-spacing: 5px;
     span {
-      margin-right: 10px;
-      color: rgba(255, 255, 255, 0.3);
+      color: rgba(255, 255, 255, 0.4);
+      font-weight: bold;
+      margin-right: 15px;
     }
   }
 
   p {
-    @include md-text;
     color: $lavanderBlue;
+    line-height: 24px;
   }
 
   &__textContent {
-    width: 80%;
+    width: 90%;
     display: block;
     margin: 0 auto;
     text-align: center;
