--- a/src/scss/components/_Nav.scss
+++ b/src/scss/components/_Nav.scss
@@ -2,7 +2,6 @@
 @use "../abstracts/mixins" as *;
 
 .header {
-  // position: fixed;
   width: 100%;
   padding: 24px 24px 14px 24px;
   z-index: 2;
@@ -25,16 +24,15 @@
     min-height: 100vh;
     padding-top: 30%;
     position: fixed;
+    width: 70%;
     top: 0;
     bottom: 0;
-    width: 70%;
-    right: 0;
+    right: -100%;
     backdrop-filter: blur(20px);
-    transform: translateX(100%);
-    @include transition(all 0.2s linear);
+    @include transition(right 0.2s linear);
 
     &--open {
-      transform: translateX(0);
+      right: 0;
     }
 
     &__menu__item {
@@ -46,6 +44,50 @@
       &:hover {
         cursor: pointer;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px;
+
+    .logoWrapper {
+      padding: 24px 38px;
+    }
+    .nav {
+      position: static;
+      min-height: unset;
+      padding-top: 0%;
+      transform: translateX(0%);
+
+      &__menu {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+
+        &__item {
+          display: flex;
+          align-items: center;
+          height: 100%;
+          border-bottom: 2px solid transparent;
+          transition: border-color 0.3s ease;
+          font-size: 1.8vw;
+          font-weight: 300;
+          font-family: "Barlow Condensed", sans-serif;
+          letter-spacing: 2px;
+        }
+        &__item:hover {
+          border-bottom: 2px solid white;
+        }
+      }
+    }
+
+    .toggler {
+      display: none;
     }
   }
 }
