--- a/src/scss/pages/_crewPage.scss
+++ b/src/scss/pages/_crewPage.scss
@@ -67,15 +67,52 @@
     padding: 30px;
   }
   .glide__bullet {
-    color: white;
     height: 10px;
     width: 10px;
     border-radius: 50%;
     border: none;
     margin: 0 10px;
+    background-color: rgba(255, 255, 255, 0.2);
 
     &--active {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: white;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .crew {
+    .wrapper {
+      padding-bottom: 0%;
+    }
+    h2 {
+      text-align: left;
+      margin-left: 5vw;
+      padding: 0;
+    }
+    h4 {
+      margin-top: 3%;
+    }
+    h5 {
+      font-size: 5.2vw;
+    }
+
+    p {
+      width: 67%;
+    }
+
+    &__crewmember {
+      flex-direction: column;
+      justify-content: start;
+    }
+
+    &__image {
+      width: 54%;
+    }
+    &__imageWrapper {
+      &::after {
+        display: none;
+      }
     }
   }
 }
