--- a/src/scss/pages/_homePage.scss
+++ b/src/scss/pages/_homePage.scss
@@ -7,7 +7,7 @@
   background-size: cover;
 
   h1 {
-    margin-bottom: 8%;
+    margin: 8%;
     font-size: 23vw;
   }
 
@@ -49,6 +49,31 @@
       color: $richBlack;
       font-family: "Bellefair", sans-serif;
       font-size: 20px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .home {
+    background-image: url("/src/assets/home/background-home-tablet.jpg");
+    h1 {
+      font-size: 20vw;
+      margin-bottom: 0%;
+    }
+
+    p {
+      width: 60%;
+    }
+    h3 {
+      padding-top: 5%;
+    }
+    &__circleBtn {
+      width: 31.5vw;
+      height: 31.5vw;
+
+      &__text {
+        font-size: 4.2vw;
+      }
     }
   }
 }
