--- a/src/scss/base/_shared.scss
+++ b/src/scss/base/_shared.scss
@@ -95,3 +95,36 @@ h6 {
     padding: 8% 0;
   }
 }
+
+@media screen and (min-width: 991px) {
+  .page {
+    height: 100vh;
+  }
+
+  .wrapper {
+    height: unset;
+  }
+
+  h2 {
+    font-size: 1.9vw;
+  }
+
+  h3 {
+    font-size: 1.9vw;
+  }
+
+  h4 {
+    font-size: 2.25vw;
+  }
+  h5 {
+    font-size: 2vw;
+  }
+
+  h6 {
+    font-size: 1.11vw;
+  }
+
+  p {
+    font-size: 1.25vw;
+  }
+}
