--- a/src/scss/components/_Nav.scss
+++ b/src/scss/components/_Nav.scss
@@ -91,3 +91,25 @@
     }
   }
 }
+
+@media screen and(min-width:991px) {
+  .header {
+    padding-top: 38px;
+    position: relative;
+
+    &::after {
+      content: "";
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.1);
+      position: absolute;
+      width: 33%;
+      top: 65%;
+      left: 12%;
+      z-index: 3;
+    }
+
+    .nav {
+      width: 58%;
+    }
+  }
+}
