--- a/src/scss/pages/_homePage.scss
+++ b/src/scss/pages/_homePage.scss
@@ -6,6 +6,12 @@
   background-attachment: fixed;
   background-size: cover;
 
+  &__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
   h1 {
     margin: 8%;
     font-size: 23vw;
@@ -73,6 +79,50 @@
 
       &__text {
         font-size: 4.2vw;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 991px) {
+  .home {
+    background-image: url("/src/assets/home/background-home-desktop.jpg");
+    display: flex;
+    flex-direction: column;
+
+    .wrapper {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      padding-top: 20%;
+      flex-grow: 1;
+    }
+
+    h1 {
+      font-size: 10.5vw;
+      margin: 3% 0;
+    }
+
+    h3 {
+      letter-spacing: 5px;
+    }
+
+    &__heading {
+      width: 55%;
+      margin-bottom: 6%;
+    }
+
+    p {
+      margin-bottom: 0%;
+    }
+
+    &__circleBtn {
+      width: 19vw;
+      height: 19vw;
+      margin-bottom: 6%;
+
+      &__text {
+        font-size: 2.3vw;
       }
     }
   }
