fixed line height for 1960px

--- a/src/scss/base/_shared.scss
+++ b/src/scss/base/_shared.scss
@@ -128,3 +128,9 @@ h6 {
     font-size: 1.25vw;
   }
 }
+
+@media screen and (min-width: 1440px) {
+  p {
+    line-height: 40px !important;
+  }
+}
