--- a/src/scss/pages/_homePage.scss
+++ b/src/scss/pages/_homePage.scss
@@ -33,29 +33,55 @@
   }
 
   &__circleBtn {
-    padding: 10% 0;
+    position: relative;
     background-color: white;
     width: 25vh;
     height: 25vh;
     border-radius: 50%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow: visible;
     border: none;
-    @include transition(transform 0.2s ease-in);
+    text-decoration: none;
 
-    &:hover {
-      transform: scale(1.25);
-      box-shadow: 0px 0px 15px rgb(255, 255, 255);
-    }
-
-    &__text {
+    // @include transition(transform 0.2s ease-in);
+    a {
       position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
       color: $richBlack;
       font-family: "Bellefair", sans-serif;
       font-size: 20px;
+      z-index: 3;
+      background-color: white;
+      height: 100%;
+      width: 100%;
+      border-radius: 50%;
     }
+    span {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: white;
+      z-index: 2;
+      border-radius: 50%;
+    }
+    &:hover span {
+      animation: pulse 1s infinite;
+    }
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.35);
   }
 }
 
@@ -77,7 +103,7 @@
       width: 31.5vw;
       height: 31.5vw;
 
-      &__text {
+      a {
         font-size: 4.2vw;
       }
     }
@@ -96,6 +122,7 @@
       justify-content: space-around;
       padding-top: 20%;
       flex-grow: 1;
+      align-items: end;
     }
 
     h1 {
@@ -109,19 +136,19 @@
 
     &__heading {
       width: 55%;
-      margin-bottom: 6%;
+      align-items: flex-start;
     }
 
     p {
       margin-bottom: 0%;
+      text-align: left;
     }
 
     &__circleBtn {
       width: 19vw;
       height: 19vw;
-      margin-bottom: 6%;
 
-      &__text {
+      a {
         font-size: 2.3vw;
       }
     }
